tests/suite/fail/generated/stderr/golden_assign_immutable.ny
fn main() {
    let x = 1
    x = 2 //~ ERROR cannot assign to immutable variable
}
